Acho que agora funciona 100%